--- a/config.example.json
+++ b/config.example.json
@@ -1,15 +1,19 @@
 {
 "xmpp": {
-    "domain": "proto.encorelab.org",
-    "port": 5222
+    "domain": "badger.encorelab.org",
+    "port": 5222,
+    "url": "ws://badger.encorelab.org:5281/"
   },
 "rollcall": {
-    "url": "http://rollcall.proto.encorelab.org:80/"
+    "url": "http://rollcall.badger.encorelab.org"
   },
 "bosh": {
-    "url": "http://proto.encorelab.org:5280/http-bind/"
+    "url": "http://badger.encorelab.org:5280/http-bind"
   },
-"mongoose": {
-    "url": "http://mongoose.proto.encorelab.org:27080/"
+"drowsy": {
+    "url": "http://drowsy.badger.encorelab.org"
+  },
+"wakeful": {
+    "url": "http://badger.encorelab.org:7777/faye"
   }
 }
