--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "Backbone.Drowsy": "git://github.com/zuk/Backbone.Drowsy.git",
     "jquery": "~1.8.3",
     "underscore": "~1.4.4",
-    "backbone": "~0.9.10"
+    "backbone": "~0.9.10",
+    "mongodb": "~1.2.14",
+    "optimist": "~0.3.5"
   },
   "devDependencies": {
     "grunt": "~0.4.0",
