--- a/config.example.json
+++ b/config.example.json
@@ -1,11 +1,20 @@
 {
+"xmpp": {
+    "domain": "badger.encorelab.org",
+    "port": 5222,
+    "url": "ws://badger.encorelab.org:5281/"
+  },
 "rollcall": {
     "url": "http://rollcall.badger.encorelab.org"
+  },
+"bosh": {
+    "url": "http://badger.encorelab.org:5280/http-bind"
   },
 "drowsy": {
     "url": "http://drowsy.badger.encorelab.org"
   },
 "wakeful": {
     "url": "http://badger.encorelab.org:7777/faye"
-  }
+  },
+"curnit":"EvoRoom-4-March-2013"
 }
