--- a/config.example.json
+++ b/config.example.json
@@ -1,12 +1,15 @@
 {
-"rollcall": {
-    "url": "http://rollcall.badger.encorelab.org"
-  },
-"drowsy": {
-    "url": "http://drowsy.badger.encorelab.org"
-  },
-"wakeful": {
-    "url": "http://badger.encorelab.org:7777/faye"
-  },
-"curnit":"EvoRoom-4-March-2013"
+    "rollcall": {
+        "url": "http://rollcall.badger.encorelab.org"
+    },
+    "drowsy": {
+        "url": "http://drowsy.badger.encorelab.org"
+    },
+    "wakeful": {
+        "url": "http://badger.encorelab.org:7777/faye"
+    },
+    "pikachu": {
+        "url": "http://pikachu.badger.encorelab.org/"
+    },
+    "curnit": "EvoRoom-4-March-2013"
 }
